package org.example;

public interface Arma {
    public int obtenerDaño(Armadura armadura);
}
