package org.example;

public interface Armadura {
    public int calcularDaño(Arco arco);
    public int calcularDaño(Espada espada);
    public int calcularDaño(Baston baston);
    public int calcularDaño(Martillo martillo);
}
