package org.example;

public interface PersonajeBuilder {
    public void equiparArmadura();
    public void equiparArma();
    public void agregarHabilidades();
    public Personaje obtenerPersonaje();
}
